<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorBlackOne"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_complain"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning"
        android:layout_marginBottom="10dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_may_lose_your_account_in_case"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_image_pp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:textColor="@color/black_alpha_40"
        android:id="@+id/cbCheckImageUpload"
        android:background="@drawable/corner_new_user_match"
        android:text="@string/i_promise_i_won_t_upload_anything_from_the_pictures_above"
        />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:id="@+id/btnUpload"
        android:background="@drawable/corner_new_user_match"
        android:textStyle="bold"
        />



</LinearLayout>