<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="270dp"
    android:background="@drawable/maxresdefault"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40sp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/default_user"
                android:id="@+id/imgvMyphoto"
                />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_addcamera"
                    android:id="@+id/changePhoto"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    />

        </LinearLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="First name"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/tvusername"
                    android:layout_marginRight="3dp"
                    />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="country"
            android:id="@+id/tvCountry"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

    </LinearLayout>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Man"
            android:id="@+id/tvsexprofile"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourage"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="23"
            android:id="@+id/tvageprofile"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+00 000 000"
                android:id="@+id/tvphone"
                android:textSize="16sp"
                android:lines="1"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>