<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dip"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:id="@+id/numberInputLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/recipient_name"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"

            />

        <com.rifcode.camchat.utils.robotoregular
            android:id="@+id/callName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="Username"
            android:gravity="center"
            android:padding="3dp"
            android:textSize="25sp"
            android:textColor="@color/colorWhite"

            >

            <requestFocus />

        </com.rifcode.camchat.utils.robotoregular>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/numberInputLayout"
        android:layout_centerHorizontal="true"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logged_in_as"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorWhite"
            />

        <TextView
            android:id="@+id/loggedInName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Someone"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/callButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:minHeight="56dp"
            android:minWidth="132dp"
            android:src="@drawable/calling_greeen"
            android:textSize="20sp" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/callButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:text="@string/stop_service_video_chat"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorWhite"

            />

    </RelativeLayout>

</RelativeLayout>